[project]
name = "family-tree"
version = "0.1.0"
requires-python = "==3.13.9"
dependencies = [
    "fastapi==0.136.0",
    "uvicorn[standard]==0.44.0",
    "sqlalchemy[asyncio]==2.0.49",
    "asyncpg==0.31.0",
    "alembic==1.18.4",
    "pydantic==2.13.2",
    "pydantic-settings==2.13.1",
    "falkordb==1.6.0",
    "python-dotenv==1.2.2",
    "langgraph==1.1.7",
    "langchain-google-genai==4.2.2",
    "langchain-core==1.3.0",
    "jinja2==3.1.6",
    "python-multipart==0.0.26",
]
